--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,13 @@
-<% provide(:title, "Home") %>
+<div class="center jumbotron">
+  <h1>Welcome to the Sample App</h1>
 
-<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+  <h2>
+    This is the home page for the
+    <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn" %>
+</div>
+
+<%= link_to image_pack_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
