--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,25 +1,10 @@
 <% provide(:title, "Sign Up") %>
+<% provide(:button_text, 'Create my account') %>
 
 <h1>Sign up</h1>
 
 <div>
   <div>
-    <%= form_with model: @user, url: signup_path, local: true do |f| %>
-      <%= render 'shared/error_messages' %>
-
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-
-      <%= f.label :email %>
-      <%= f.email_field :email %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation %>
-
-      <%= f.submit "Create my account", class: "btn" %>
-    <% end %>
+    <%= render 'form' %>
   </div>
 </div>
