--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,5 @@
-<div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
-
-  <h2>
-    This is the home page for the
-    <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
-
-  <%= link_to "Sign up now!", signup_path, class: "btn" %>
-</div>
-
-<%= link_to image_pack_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
+<% if logged_in? %>
+  <%= render 'static_pages/user_logged_in' %>
+<% else %>
+  <%= render 'static_pages/user_not_logged_in' %>
+<% end %>
